# OpenTPS-brachyutils

./: .gitattributes  .gitignore  .gitlab-ci.yml  LICENSE  README.md  liver_beamlet_free_opti.py  logConfigParser.py  main.py  opti_no_GUI.py  pyproject.toml  read_example.py  robust_opti_no_GUI.py  testDeformationField.py  testJsonPlan.py
API/: __init__.py  api.py  dataLoaderAPI.py  dynamicSequenceAPI.py  instantiateAPI.py
API/API_methods/: dataLoaderAPI.py  dynamicSequenceAPI.py
CodeExamples_NoGUI/: 3DSeqDRR.py  anonymizeDicom.py  create3DSeqAnd3DModel.py  exampleDeformationFromWeightMaps.py  exampleMidP.py  exampleMorphons.py  readCTImage.py
Controllers/: __init__.py  api.py  dataLoaderController.py  dynamicSequenceController.py  instantiateAPI.py  modelController.py
Controllers/DataControllers/: ctImageController.py  dataController.py  doseImageController.py  dynamicModelControllers.py  dynamicSequenceController.py  dynamicSequenceControllers.py  image3DController.py  patientController.py  patientListController.py  roiContourController.py  rtStructController.py  vectorField3DController.py
Controllers/IOControllers/: dataLoaderController.py  dicomReaderController.py
Core/: api.py  event.py
Core/Data/: RTplan.py  ctImage.py  deformationField.py  dvh.py  dvhBand.py  dynamic2DSequence.py  dynamic3DModel.py  dynamic3DSequence.py  image2D.py  image3D.py  patienList.py  patient.py  patientData.py  patientInfo.py  patientList.py  radioImage.py  roiContour.py  roiStruct.py  rtStruct.py
GUI/: AddArc_dialog.py  AddBeam_dialog.py  AddObjective_dialog.py  MainWindow.py  ObjectiveTemplateWindow.py  Robustness_Settings_dialog.py  Toolbox_DoseComparison.py  Toolbox_DoseComputation.py  Toolbox_ImageRegistration.py  Toolbox_PatientData.py  Toolbox_PlanDesign.py  Toolbox_PlanEvaluation.py  Toolbox_PlanOptimization.py  Toolbox_ROI.py  Viewer_3D_RT.py  Viewer_DVH.py  Viewer_Grid.py  statusBar.py  viewController.py
GUI/Viewer/: grid.py  (+9 more)
MCsquare/: MCsquare
Process/: CTimage.py  ConfigTemplate.txt  DVH.py  DeformationField.py  FluoroscopySimulation.py  MCsquare.py  MCsquare_BDL.py  MCsquare_config.py  MCsquare_plan.py  MCsquare_sparse_format.py  MHD_image.py  OptimizationObjectives.py  PatientData.py  PlanOptimization.py  RTdose.py  RTplan.py  RTstruct.py  Registration.py  RobustnessTest.py  SPRimage.py  jsonPlan.py
Script/: startScript.py  startScriptExample.py
config/: README.md
testData/: lightDynSeqWithMod.p.REMOVED.git-id  lightTest4DCT.p.REMOVED.git-id  veryLightDynMod.p.REMOVED.git-id
(+182 files in other folders)
