[tool.poetry]
name = "opentps"
homepage = "http://opentps.org/"
version = "2.0.2"
readme = "README.md"
license = "Apache-2.0"
description = "Open source TPS for advanced proton therapy"
authors = ["Sylvain Deffet <sylvaindeffet@gmail.com>",
    "Damien Dasnoy <damien.dasnoy@uclouvain.be>",
    "Valentin Hamaide <valentin.hamaide@uclouvain.be>",
    "Guillaume Janssens <guillaume.janssens@iba-group.com>",
    "Kevin Souris <kevin.souris@iba-group.com>",
    "Sophie Wuyckens <sophie.wuyckens@uclouvain.be>"]
packages = [
    { include = "opentps/core", from="opentps_core"},
    { include = "opentps/gui", from="opentps_gui"}
]

[tool.poetry.dependencies]
python = "~3.13"
cachecontrol = "*"
numpy = "*"
Pillow = "*"
pydicom = "*"
vtk = "*"
PyQt5 = "*"
PyQt5-Qt5 = '*'
pyqtgraph = "*"
SimpleITK = "*"
sparse-dot-mkl = "*"
setuptools = "*" # Required for local testing with python -m pip install -e .
pandas = "*"
requests = "*"
scikit-image = "*"
pymedphys="*"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
opentps = "opentps.gui:main.run"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"